--- a/lab/.vscode/settings.json
+++ b/lab/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
     "python.defaultInterpreterPath": "./lab/.venv/bin/python",
+    // "workbench.colorTheme": "GitHub Light",
+    // "window.autoDetectColorScheme": false,
+    // "window.zoomLevel": 2
 }
