--- a/lab/requirements.txt
+++ b/lab/requirements.txt
@@ -7,5 +7,6 @@ torch==2.5.1
 torchvision==0.20.1
 tqdm==4.66.6
 git+https://github.com/NikolayBlagoev/simplellm.git@55a412a
-transformers==4.47.1
+transformers==4.57.6
+bitsandbytes==0.48.2
 -e .
