--- a/lab/requirements.txt
+++ b/lab/requirements.txt
@@ -9,4 +9,6 @@ tqdm==4.66.6
 git+https://github.com/NikolayBlagoev/simplellm.git@55a412a
 transformers==4.57.6
 bitsandbytes==0.48.2
+pytest==8.4.2
+testbook==0.4.2
 -e .
